# Tensor-Network-Editor

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  THIRD_PARTY_LICENSES  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  faq-troubleshooting.md  getting-started.md  python-api.md  user-guide.md
examples/: basic_usage.py
scripts/: clean.bat  clean.sh  run_pyright.py
src/tensor_network_editor/: __init__.py  __main__.py  _analysis.py  _contraction_analysis.py  _contraction_analysis_types.py  _contraction_plan.py  _headless_models.py  _io.py  _linear_periodic.py  _memory_dtypes.py  _model_contraction.py  _model_geometry.py  _model_graph.py  _model_results.py  _network_analysis.py  _payloads.py  _python_roundtrip.py  _python_roundtrip_helpers.py  _template_builders.py  _template_catalog.py  _templates.py  _validation_common.py  _validation_contraction.py  _validation_edges.py  _validation_entities.py  _validation_linear_periodic.py  _version.py  analysis.py  api.py  cli.py  diffing.py  errors.py  linting.py  models.py  serialization.py  templates.py  types.py  validation.py
src/tensor_network_editor/app/: __init__.py  _protocol.py  _services.py  routes.py  server.py  session.py
src/tensor_network_editor/app/static/: app.css  app.js  index.html
src/tensor_network_editor/app/static/js/: api.js  bootstrap.js  constants.js  contractionScene.js  core.js  dom.js  editorContext.js  exportMinimap.js  graphRender.js  history-selection.js  historySelection.js  interactions.js  main.js  notes.js  notesPlanner.js  overlaysLayoutTemplates.js  planner.js  properties.js  sidebarTabs.js  state.js  utilities.js
src/tensor_network_editor/codegen/: __init__.py  base.py  common.py  einsum.py  einsum_numpy.py  einsum_torch.py  linear_periodic.py  quimb.py  registry.py  tensorkrowch.py  tensornetwork.py
tests/: __init__.py  app_support.py  conftest.py  factories.py  test_analysis.py  test_api.py  test_app_assets.py  test_app_routes.py  test_app_server.py  test_app_services.py  test_cli.py  test_contraction_analysis.py  test_contraction_analysis_internal.py  test_frontend_plan_regressions.py  test_frontend_runtime.py  test_headless_public_api.py  test_io.py  test_layout_templates.py  test_linting.py  test_models_validation.py  test_network_analysis_service.py  test_packaging.py  test_payloads.py  test_protocol.py  test_python_roundtrip_internal.py  test_scripts.py  test_serialization.py  test_session.py  test_template_catalog_internal.py
tests/codegen/: test_common.py  test_generators.py
