[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-network-editor"
dynamic = ["version"]
description = "Interactive local editor for building tensor networks and generating Python code."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_LICENSES"]
authors = [
  { name = "Alejandro Mata Ali" }
]
keywords = ["tensor-network", "editor", "code-generation", "scientific-computing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: JavaScript",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/DOKOS-TAYOS/Tensor-Network-Editor"
Repository = "https://github.com/DOKOS-TAYOS/Tensor-Network-Editor"
Issues = "https://github.com/DOKOS-TAYOS/Tensor-Network-Editor/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pyright>=1.1",
  "pytest>=8.2",
  "ruff>=0.6",
  "twine>=5.1",
]
tensornetwork = ["tensornetwork>=0.4"]
quimb = ["quimb>=1.7"]
tensorkrowch = ["tensorkrowch>=1.1"]
planner = ["opt_einsum>=3.3"]
desktop = ["pywebview>=5,<6"]

[project.scripts]
tensor-network-editor = "tensor_network_editor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "tensor_network_editor._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tensor_network_editor = [
  "py.typed",
  "app/static/*.html",
  "app/static/*.css",
  "app/static/*.js",
  "app/static/js/*.js",
  "app/static/vendor/*.js",
]

[tool.pytest.ini_options]
addopts = "-ra -p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests", "examples"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "UP"]

[tool.mypy]
files = ["src"]
python_version = "3.11"
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
extraPaths = ["src"]
typeCheckingMode = "standard"
